<resources>
    <string name="app_name">LearningApp</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="forgot_password">forgot Password</string>
    <string name="dont_have_an_account">Dont have an account </string>
    <string name="signup">signup</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="register">Register\n</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="registerRg">Register</string>
    <string name="usernameUs">username</string>
    <string name="emailEmail">email</string>
    <string name="password">*****</string>
    <string name="comformPassword">*****</string>
    <string name="loginbtn">EDUCATION</string>
    <string name="unlock_knowledge_and_enjoy_learning_with_us">Unlock_knowledge_and_enjoy_learning_with_us</string>
    <string name="todo">TODO</string>
    <string name="education">SkillBoost</string>
    <string name="logout">Logout</string>
    <string name="todot">TODO</string>
    <string name="support">Support</string>
    <string name="todoTT">TODO</string>
    <string name="free_courses">Free Courses</string>
    <string name="todoT">TODO</string>
    <string name="premium_course">Premium Course</string>
    <string name="TTT">TODO</string>
    <string name="profile">Profile</string>
    <string name="todoRT">TODO</string>
    <string name="home">Home</string>
    <string name="DS">TODO</string>
    <string name="CV">TODO</string>
    <string name="VB">TODO</string>
    <string name="unlock_knowledge_and_enjoy_learning_with_uss">Unlock knowledge and enjoy learning with us!</string>
    <string name="welcome_to_learneasy">Welcome to LearnEasy!</string>
    <string name="see_more">See more</string>
    <string name="introduction_of_artificial_intelligence">Introduction of Artificial Intelligence</string>
    <string name="introduction_of_cyber_security">/introduction of Cyber Security</string>
    <string name="see_more1">See more</string>
    <string name="recommended_courses">Recommended Courses</string>
    <string name="top_category">Top Category</string>
    <string name="search">Search</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="fashion_design">Fashion Design</string>
    <string name="graphic_design">Graphic Design</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="here_are_some_courses_based_on_your_interests">Here are some courses based on your interests.</string>
    <string name="introduction_to_cybercrime">Introduction to Cybercrime</string>
    <string name="_4_6">4.6</string>
    <string name="_40k_learners">• 40K Learners</string>
    <string name="recommended_course">Recommended Course</string>
    <string name="completion_certificate">✔ Completion Certificate</string>
    <string name="free">FREE</string>
    <string name="af">TODO</string>
    <string name="todo6">TODO</string>
    <string name="_4_9">4.9</string>
    <string name="introduction_of_ai">Introduction of AI</string>
    <string name="_37k_learners">37k learners</string>
</resources>