<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/bgimage">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="43dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/VB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_search" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="39dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/CV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="369dp"
        android:layout_height="558dp"
        android:layout_below="@+id/top_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ADD8E6"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/DS"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ADD8E6"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/todoRT"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/profile"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ADD8E6"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/TTT"
                    android:src="@drawable/ic_premium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/premium_course"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ADD8E6"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/todoT"
                    android:src="@drawable/ic_course"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/free_courses"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ADD8E6"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/todoTT"
                    android:src="@drawable/ic_support" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/support"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ADD8E6"
                android:orientation="vertical"
                tools:ignore="DuplicateIds">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/todot"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:text="@string/logout"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="DashBoard"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />


</androidx.constraintlayout.widget.ConstraintLayout>