<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bgimage">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerRg"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person1"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/usernameUs"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/emailEmail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/Username"
        app:layout_constraintStart_toStartOf="@+id/Username"
        app:layout_constraintTop_toBottomOf="@+id/Username"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/pd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/ConformPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="comformPassword"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/comformPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/pd"
        app:layout_constraintStart_toStartOf="@+id/pd"
        app:layout_constraintTop_toBottomOf="@+id/pd"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ConformPassword"
        app:layout_constraintStart_toStartOf="@+id/ConformPassword"
        app:layout_constraintTop_toBottomOf="@+id/ConformPassword"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/colorWhite"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>