<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bgimage">


    <TextView
        android:id="@+id/logo"
        android:layout_width="136dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:text="Login"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/pd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pd"
        app:layout_constraintTop_toBottomOf="@+id/pd" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="342dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textAlignment="center"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnlogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnlogin"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#B3E5FC"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.32999998"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintTop_toTopOf="@+id/btnGoogle"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>