<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexActivity"
    android:background="@drawable/bb">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPageOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/education"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/ic_premium2"
        android:text="@string/education"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="415dp"
        android:layout_height="263dp"
        android:layout_marginStart="400dp"
        android:layout_marginTop="530dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/viewPageOnBoarding"
        app:layout_constraintEnd_toStartOf="@+id/viewPageOnBoarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_graduation" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#80000000"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:text="Login"
        android:textColor="#fff"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewPageOnBoarding"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="347dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:text= "@string/unlock_knowledge_and_enjoy_learning_with_uss"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>